--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,11 @@ body {
 }
 
 .blink {
-  animation: blinker 0.5s linear infinite;
+  animation: blinker 1s ease-in-out infinite;
 }
 
 @keyframes blinker {
-  50% {
+  100% {
     opacity: 0;
   }
 }
